oci-public-vcn-native/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
  labels:
    loadbalancer.oci.oraclecloud.com/pod-readiness-gate-inject: enabled
