oci-public-vcn-native/tls-redirect.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: oci-public-apps
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
